--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@sentry/cli": "^1.46.0",
     "@sentry/electron": "^1.0.0",
     "@types/electron-devtools-installer": "^2.2.0",
+    "@types/google-translate-api": "^2.3.1",
     "@types/js-yaml": "^3.12.1",
     "@types/lodash": "^4.14.149",
     "@types/node": "^12.12.31",
@@ -68,6 +69,7 @@
     "electron-is-dev": "^1.2.0",
     "electron-updater": "^4.3.0",
     "fast-deep-equal": "^3.1.1",
+    "google-translate-api": "^2.3.0",
     "js-yaml": "^3.13.1",
     "lodash": "^4.17.15",
     "node-watch": "^0.6.3",
