--- a/package.json
+++ b/package.json
@@ -68,11 +68,13 @@
     "electron-is-dev": "^1.2.0",
     "electron-updater": "^4.3.0",
     "fast-deep-equal": "^3.1.1",
+    "google-translate-api-browser": "^1.1.71",
     "js-yaml": "^3.13.1",
     "lodash": "^4.17.15",
     "node-watch": "^0.6.3",
     "rimraf": "^3.0.2",
     "roboto-fontface": "*",
+    "snyk": "^1.316.1",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-router": "^3.1.6",
@@ -80,8 +82,7 @@
     "vuetify": "^2.2.20",
     "vuex": "^3.1.3",
     "vuex-class": "^0.3.2",
-    "vuex-module-decorators": "^0.16.1",
-    "snyk": "^1.316.1"
+    "vuex-module-decorators": "^0.16.1"
   },
   "browserslist": [
     "last 2 Chrome versions"
