--- a/package.json
+++ b/package.json
@@ -63,6 +63,8 @@
     "@mdi/font": "^5.0.45",
     "@vue/composition-api": "^0.5.0",
     "axios": "^0.19.2",
+    "browserslist": "^4.19.1",
+    "caniuse-lite": "^1.0.30001289",
     "deepmerge": "^4.2.2",
     "electron-devtools-installer": "^2.2.4",
     "electron-is-dev": "^1.2.0",
